InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/Adjuster_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Adjuster_Assigned__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Use as the start DTTM for Adjuster SLA calculations.</description>
    <label>Adjuster Assigned</label>
    <type>DateTime</type>
</CustomField>