InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/DemoClaim__c.field-meta.xml
<CustomField>
    <fullName>DemoClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field for demo purposes to govern display of the Adjuster Dashboard. This should be deleted for customer implementations.</description>
    <label>DemoClaim</label>
    <type>Checkbox</type>
</CustomField>