InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/DemoNumberDaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DemoNumberDaysOpen__c</fullName>
    <description>Demo field to render display for Adjuster Dashboard graphs. This field should be removed for implementations.</description>
    <label>Demo Number Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>