InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <description>Date/Time to indicate when the Adjuster made initial contact with the insured.</description>
    <label>Initial Contact</label>
    <type>DateTime</type>
</CustomField>