InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/Initial_Contact_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_SLA_Hours__c</fullName>
    <formula>IF(NOT(ISNULL(Adjuster_Assigned__c)),
IF(NOT(ISNULL(Initial_Contact__c)), (Initial_Contact__c - Adjuster_Assigned__c)*24, 
IF(NOT(OR(ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;FNOL&quot;),ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;Closed&quot;),ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;Reopened&quot;))), (NOW() - Adjuster_Assigned__c)*24, NULL)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Contact SLA Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>