InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/Inspection_Complete__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete__c</fullName>
    <label>Inspection Complete</label>
    <type>DateTime</type>
</CustomField>