InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/Inspection_Complete_SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete_SLA_Days__c</fullName>
    <formula>IF(NOT(ISNULL(Adjuster_Assigned__c)),
IF(NOT(ISNULL(Inspection_Complete__c)), Inspection_Complete__c - Adjuster_Assigned__c, 
IF(NOT(OR(ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;FNOL&quot;),ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;Closed&quot;),ISPICKVAL(vlocity_ins__ClaimStatus__c, &quot;Reopened&quot;))), NOW() - Adjuster_Assigned__c, NULL)),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Complete SLA Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>