InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimStatus__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Adjuster Review</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Confirm Coverage</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>