InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__ClaimTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimTotalAmount__c</fullName>
    <formula>vlocity_ins__SumAcceptedLossAmount__c + MAX(vlocity_ins__SumPendingLossAmount__c,  vlocity_ins__SumCoverageReserveAmount__c)  + vlocity_ins__SumExpenseAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>