InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__DaysSinceStatusUpdated__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DaysSinceStatusUpdated__c</fullName>
    <formula>TODAY() - vlocity_ins__StatusDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Status Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>