InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__IsChargeable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsChargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargeable?</label>
    <type>Checkbox</type>
</CustomField>