InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__IsSubrogatable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsSubrogatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subrogatable?</label>
    <type>Checkbox</type>
</CustomField>