InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__LossDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LossDate__c</fullName>
    <label>Loss Date</label>
    <type>Date</type>
</CustomField>