InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryOwnerName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryOwnerName__c</fullName>
    <formula>vlocity_ins__PrimaryOwnerPartyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Owner</label>
    <type>Text</type>
</CustomField>