InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryPayeeAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryPayeeAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Payee Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>ClaimsPrimaryPayee</relationshipName>
    <type>Lookup</type>
</CustomField>