InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryPolicyAssetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryPolicyAssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Policy</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>PrimaryClaims</relationshipName>
    <type>Lookup</type>
</CustomField>