InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryPolicyLineOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryPolicyLineOfBusiness__c</fullName>
    <formula>vlocity_ins__PrimaryPolicyId__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB</label>
    <type>Text</type>
</CustomField>