InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryPolicyNumber__c</fullName>
    <formula>vlocity_ins__PrimaryPolicyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>