InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__PrimaryPolicyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryPolicyType__c</fullName>
    <formula>TEXT(vlocity_ins__PrimaryPolicyId__r.vlocity_ins__PolicyType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Type</label>
    <type>Text</type>
</CustomField>