InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__RemainingReserveAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RemainingReserveAmount__c</fullName>
    <description>DEPRECATED</description>
    <formula>vlocity_ins__SumInvolvedPropertyReserveAmount__c + vlocity_ins__SumInvolvedPartyReserveAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>