InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__ReportedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ReportedDate__c</fullName>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>