InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__StatusImage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StatusImage__c</fullName>
    <formula>IF( TEXT(vlocity_ins__ClaimStatus__c) ==&apos;Open&apos;, &apos;open&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Reopened&apos;, &apos;open&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Closed&apos;, &apos;closed&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Closed W/O Pay&apos;, &apos;closed&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Image</label>
    <type>Text</type>
</CustomField>