InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__SumPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SumPaidAmount__c</fullName>
    <label>Sum Paid Amount</label>
    <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__PaidAmount__c</summarizedField>
    <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>