InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/fields/vlocity_ins__SumPendingLossAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SumPendingLossAmount__c</fullName>
    <label>Pending Loss Amount</label>
    <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__AdjustedAmount__c</summarizedField>
    <summaryFilterItems>
        <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Type__c</field>
        <operation>equals</operation>
        <value>Loss</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Status__c</field>
        <operation>notEqual</operation>
        <value>Paid, Closed W/O Pay</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>