InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/recordTypes/vlocity_ins__PCPersonalLines.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__PCPersonalLines</fullName>
    <active>true</active>
    <label>P&amp;C Personal Lines</label>
</RecordType>