InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/listViews/My_New_Claims.listView-meta.xml
<ListView>
    <fullName>My_New_Claims</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__PrimaryOwnerName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>vlocity_ins__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>vlocity_ins__ClaimStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>My New Claims</label>
</ListView>