InsuranceOrg/force-app/main/default/objects/vlocity_ins__InsuranceClaim__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__ClaimStatus__c</columns>
    <columns>vlocity_ins__PrimaryOwnerPartyId__c</columns>
    <columns>vlocity_ins__PrimaryPolicyId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>